OcctSharp/src/OcctSharp.Native/include/OcctSharp.Native.h

typedef enum OcctSharp_Status
{
  OCCTSHARP_STATUS_SUCCESS = 0,
  OCCTSHARP_STATUS_INVALID_ARGUMENT = 1,
  OCCTSHARP_STATUS_NULL_HANDLE = 2,
  OCCTSHARP_STATUS_OCCT_FAILURE = 3,
  OCCTSHARP_STATUS_STANDARD_EXCEPTION = 4,
  OCCTSHARP_STATUS_UNKNOWN_EXCEPTION = 5,
  OCCTSHARP_STATUS_FILE_IO_ERROR = 6,
  OCCTSHARP_STATUS_TRANSFER_FAILED = 7,
  OCCTSHARP_STATUS_INVALID_HANDLE = 8,
  OCCTSHARP_STATUS_TYPE_MISMATCH = 9
} OcctSharp_Status;
typedef struct OcctSharp_TrsfHandle OcctSharp_TrsfHandle;
typedef struct OcctSharp_VecHandle OcctSharp_VecHandle;
typedef struct OcctSharp_Ax1Handle OcctSharp_Ax1Handle;
typedef struct OcctSharp_MatHandle OcctSharp_MatHandle;
typedef struct OcctSharp_AsciiStringHandle OcctSharp_AsciiStringHandle;
typedef struct OcctSharp_ExtendedStringHandle OcctSharp_ExtendedStringHandle;
typedef struct OcctSharp_RealSequenceHandle OcctSharp_RealSequenceHandle;
typedef struct OcctSharp_RealArrayHandle OcctSharp_RealArrayHandle;
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ax1_create(
  double origin_x, double origin_y, double origin_z,
  double direction_x, double direction_y, double direction_z,
  OcctSharp_Ax1Handle** out_axis);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ax1_clone(
  const OcctSharp_Ax1Handle* source, OcctSharp_Ax1Handle** out_axis);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ax1_components(
  const OcctSharp_Ax1Handle* axis,
  double* origin_x, double* origin_y, double* origin_z,
  double* direction_x, double* direction_y, double* direction_z);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ax1_reversed(
  const OcctSharp_Ax1Handle* source, OcctSharp_Ax1Handle** result);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_ax1_release(OcctSharp_Ax1Handle* axis);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_mat_create(
  const double* values, OcctSharp_MatHandle** out_matrix);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_mat_identity(
  OcctSharp_MatHandle** out_matrix);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_mat_clone(
  const OcctSharp_MatHandle* source, OcctSharp_MatHandle** out_matrix);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_mat_value(
  const OcctSharp_MatHandle* matrix, int32_t row, int32_t column, double* value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_mat_determinant(
  const OcctSharp_MatHandle* matrix, double* determinant);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_mat_release(OcctSharp_MatHandle* matrix);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_trsf_create_translation_vec(
  const OcctSharp_VecHandle* vector, OcctSharp_TrsfHandle** out_transform);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_trsf_create_rotation_axis(
  const OcctSharp_Ax1Handle* axis, double angle_radians, OcctSharp_TrsfHandle** out_transform);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ascii_create(
  const char* utf8, int32_t length, OcctSharp_AsciiStringHandle** out_string);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ascii_clone(
  const OcctSharp_AsciiStringHandle* source, OcctSharp_AsciiStringHandle** out_string);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ascii_length(
  const OcctSharp_AsciiStringHandle* string, int32_t* length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ascii_append(
  OcctSharp_AsciiStringHandle* string, const char* utf8, int32_t length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ascii_to_utf8(
  const OcctSharp_AsciiStringHandle* string, char* buffer, int32_t capacity, int32_t* written);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_ascii_to_extended(
  const OcctSharp_AsciiStringHandle* string, OcctSharp_ExtendedStringHandle** out_string);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_ascii_release(OcctSharp_AsciiStringHandle* string);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_extended_create_utf8(
  const char* utf8, int32_t length, OcctSharp_ExtendedStringHandle** out_string);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_extended_clone(
  const OcctSharp_ExtendedStringHandle* source, OcctSharp_ExtendedStringHandle** out_string);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_extended_length(
  const OcctSharp_ExtendedStringHandle* string, int32_t* length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_extended_utf8_length(
  const OcctSharp_ExtendedStringHandle* string, int32_t* length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_extended_append_utf8(
  OcctSharp_ExtendedStringHandle* string, const char* utf8, int32_t length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_extended_to_utf8(
  const OcctSharp_ExtendedStringHandle* string, char* buffer, int32_t capacity, int32_t* written);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_extended_value(
  const OcctSharp_ExtendedStringHandle* string, int32_t index, uint16_t* value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_extended_to_ascii(
  const OcctSharp_ExtendedStringHandle* string, OcctSharp_AsciiStringHandle** out_string);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_extended_release(OcctSharp_ExtendedStringHandle* string);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_sequence_create(
  const double* values, int32_t count, OcctSharp_RealSequenceHandle** out_sequence);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_sequence_clone(
  const OcctSharp_RealSequenceHandle* source, OcctSharp_RealSequenceHandle** out_sequence);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_sequence_length(
  const OcctSharp_RealSequenceHandle* sequence, int32_t* length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_sequence_value(
  const OcctSharp_RealSequenceHandle* sequence, int32_t index, double* value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_sequence_append(
  OcctSharp_RealSequenceHandle* sequence, double value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_sequence_set_value(
  OcctSharp_RealSequenceHandle* sequence, int32_t index, double value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_sequence_remove(
  OcctSharp_RealSequenceHandle* sequence, int32_t index);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_real_sequence_release(OcctSharp_RealSequenceHandle* sequence);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_array_create(
  const double* values, int32_t count, OcctSharp_RealArrayHandle** out_array);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_array_clone(
  const OcctSharp_RealArrayHandle* source, OcctSharp_RealArrayHandle** out_array);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_array_length(
  const OcctSharp_RealArrayHandle* array, int32_t* length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_array_lower(
  const OcctSharp_RealArrayHandle* array, int32_t* lower);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_array_value(
  const OcctSharp_RealArrayHandle* array, int32_t index, double* value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_array_set_value(
  OcctSharp_RealArrayHandle* array, int32_t index, double value);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_real_array_release(OcctSharp_RealArrayHandle* array);