OcctSharp/src/OcctSharp/Interop/NativeMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ax1_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateAxis(double ox, double oy, double oz, double dx, double dy, double dz, out nint axis);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ax1_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneAxis(AxisHandle source, out nint axis);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ax1_components")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetAxisComponents(AxisHandle axis, out double ox, out double oy, out double oz, out double dx, out double dy, out double dz);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ax1_reversed")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus ReverseAxis(AxisHandle source, out nint result);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ax1_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseAxis(nint axis);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_mat_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateMatrix(nint values, out nint matrix);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_mat_identity")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateIdentityMatrix(out nint matrix);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_mat_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneMatrix(MatrixHandle source, out nint matrix);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_mat_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetMatrixValue(MatrixHandle matrix, int row, int column, out double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_mat_determinant")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetMatrixDeterminant(MatrixHandle matrix, out double determinant);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_mat_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseMatrix(nint matrix);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_create_translation_vec")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateTranslationTransform(VectorHandle vector, out nint transform);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_create_rotation_axis")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateRotationTransform(AxisHandle axis, double angleRadians, out nint transform);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ascii_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateAscii(nint utf8, int length, out nint value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ascii_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneAscii(AsciiStringHandle source, out nint value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ascii_length")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetAsciiLength(AsciiStringHandle value, out int length);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ascii_append")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus AppendAscii(AsciiStringHandle value, nint utf8, int length);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ascii_to_utf8")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CopyAsciiUtf8(AsciiStringHandle value, nint buffer, int capacity, out int written);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ascii_to_extended")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus ConvertAsciiToExtended(AsciiStringHandle value, out nint extended);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_ascii_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseAscii(nint value);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_create_utf8")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateExtended(nint utf8, int length, out nint value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneExtended(ExtendedStringHandle source, out nint value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_length")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetExtendedLength(ExtendedStringHandle value, out int length);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_utf8_length")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetExtendedUtf8Length(ExtendedStringHandle value, out int length);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_append_utf8")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus AppendExtendedUtf8(ExtendedStringHandle value, nint utf8, int length);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_to_utf8")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CopyExtendedUtf8(ExtendedStringHandle value, nint buffer, int capacity, out int written);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetExtendedValue(ExtendedStringHandle value, int index, out ushort character);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_to_ascii")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus ConvertExtendedToAscii(ExtendedStringHandle value, out nint ascii);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_extended_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseExtended(nint value);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_sequence_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateRealSequence(nint values, int count, out nint sequence);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_sequence_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneRealSequence(RealSequenceHandle source, out nint sequence);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_sequence_length")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetRealSequenceLength(RealSequenceHandle sequence, out int length);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_sequence_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetRealSequenceValue(RealSequenceHandle sequence, int index, out double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_sequence_append")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus AppendRealSequence(RealSequenceHandle sequence, double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_sequence_set_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus SetRealSequenceValue(RealSequenceHandle sequence, int index, double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_sequence_remove")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus RemoveRealSequence(RealSequenceHandle sequence, int index);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_sequence_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseRealSequence(nint sequence);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_array_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateRealArray(nint values, int count, out nint array);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_array_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneRealArray(RealArrayHandle source, out nint array);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_array_length")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetRealArrayLength(RealArrayHandle array, out int length);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_array_lower")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetRealArrayLower(RealArrayHandle array, out int lower);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_array_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetRealArrayValue(RealArrayHandle array, int index, out double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_array_set_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus SetRealArrayValue(RealArrayHandle array, int index, double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_array_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseRealArray(nint array);
